# NEVACS

./: Makefile  README.md  requirements.txt
Single-Frame-Activated Sorter/: CMakeLists.txt  README.md  detection_model.pt  yololayer-now.h  yololayer.h  yolov5_pro.cpp  yolov5_pro_offline.cpp
Single-Frame-Activated Sorter/DeepSORT/: CMakeLists (copy).txt  CMakeLists.txt  track_deepsort.cpp  track_deepsort.h
Single-Frame-Activated Sorter/DeepSORT/DeepAppearanceDescriptor/: model.h
Single-Frame-Activated Sorter/DeepSORT/KalmanFilter/: linear_assignment.cpp  linear_assignment.h  nn_matching.cpp  track.cpp  track.h  tracker.cpp  tracker.h
Single-Frame-Activated Sorter/DeepSORT/MunkresAssignment/: hungarianoper.cpp
Single-Frame-Activated Sorter/DeepSORT/MunkresAssignment/munkres/: munkres.h
data/: cell_ifc_datatool.py
mmcls/models/backbones/: __init__.py  base_backbone.py  lynxi_backbones_itout.py
requirements/: mminstall.txt  runtime.txt
tools/: test.py  train.py
work_dirs/clif2fc1ce_itout-b16x1-celldataset/: clif2fc1ce_itout-b16x1-celldataset.py  epoch_1.pth
